research details change

--- a/index.html
+++ b/index.html
@@ -108,19 +108,19 @@
           <div class="lecture-collage reveal">
             <div class="lecture-frame">
               <img src="assets/image3.jpg" alt="Lecture activity 1" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';" />
-              <div class="placeholder" style="display:none;">Lecture Photo 1<br />assets/image21.jpg</div>
+              <div class="placeholder" style="display:none;">Lecture Photo 1<br />assets/image3.jpg</div>
             </div>
             <div class="lecture-frame">
               <img src="assets/image4.jpg" alt="Lecture activity 2" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';" />
-              <div class="placeholder" style="display:none;">Lecture Photo 2<br />assets/image2.jpg</div>
+              <div class="placeholder" style="display:none;">Lecture Photo 2<br />assets/image3.jpeg</div>
             </div>
             <div class="lecture-frame">
               <img src="assets/image5.jpeg" alt="Lecture activity 3" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';" />
-              <div class="placeholder" style="display:none;">Lecture Photo 3<br />assets/image.jpg</div>
+              <div class="placeholder" style="display:none;">Lecture Photo 3<br />assets/image6.jpeg</div>
             </div>
             <div class="lecture-frame">
               <img src="assets/image2.jpeg" alt="Lecture activity 4" onerror="this.style.display='none'; this.nextElementSibling.style.display='grid';" />
-              <div class="placeholder" style="display:none;">Lecture Photo 4<br />assets/image1.jpg</div>
+              <div class="placeholder" style="display:none;">Lecture Photo 4<br />assets/image4.jpg</div>
             </div>
           </div>
         </div>
@@ -233,6 +233,10 @@
               </li>
               <li class="pub-item">
                 <p>Pirathap, V. "An Adaptive Maintainability Complexity Score for Multi-Language Software Systems," International Conference on Information and Communication Technology (ICICT 2026), London, United Kingdom. Springer Lecture Notes in Networks and Systems (LNNS). (Accepted - in proceedings).</p>
+                <a class="pub-link" href="https://scholar.google.com/scholar?q=An+Adaptive+Maintainability+Complexity+Score+for+Multi-Language+Software+Systems" target="_blank" rel="noopener noreferrer">Available Link</a>
+              </li>
+              <li class="pub-item">
+                <p>Pirathap, V., Sangeeta, A., Gowrisha, K., Manikandan, M., Lokuliyana, S.“BZTEF: A Blockchain-Based Zero Trust Enforcement Framework for Cloud-Native Environments,” 19th IEEE International Conference on Industrial and Information Systems (ICIIS 2026), Peradeniya. (Accepted - in proceedings).</p>
                 <a class="pub-link" href="https://scholar.google.com/scholar?q=An+Adaptive+Maintainability+Complexity+Score+for+Multi-Language+Software+Systems" target="_blank" rel="noopener noreferrer">Available Link</a>
               </li>
             </ul>
